# fastapi-sync-async-starter

./: .coveragerc  .dockerignore  .env  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
media/example_coverage_report/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_532385f02888fdd3___init___py.html  z_532385f02888fdd3_models_py.html  z_532385f02888fdd3_schemas_py.html  z_9ffb13e3a994f833___init___py.html  z_9ffb13e3a994f833_user_async_py.html  z_9ffb13e3a994f833_user_sync_py.html  z_ce21df766c911d41___init___py.html  z_ce21df766c911d41_config_py.html  z_ce21df766c911d41_database_py.html
media/example_pytest_report/: index.html
scripts/: init.sql
src/core/: config.py  database.py  rate_limiter.py  utils.py
src/models/: enums.py  models.py  schemas.py
src/routers/: rate_limited_async.py  rate_limited_sync.py  user_async.py  user_sync.py
tests/: conftest.py
tests/routers/: test_async_endpoints.py  test_rate_limited_async_endpoints.py  test_rate_limited_sync.py  test_rate_limited_sync_endpoints.py  test_sync_endpoints.py
